[gd_scene load_steps=3 format=3 uid="uid://by6tdey6sc6uw"]

[ext_resource type="Script" path="res://Scripts/Options.gd" id="1_7s1ry"]
[ext_resource type="Script" path="res://Scripts/Utils.gd" id="2_qqjs0"]

[node name="Options" type="Node2D"]
script = ExtResource("1_7s1ry")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="BoxContainer" type="BoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -82.5
offset_top = -56.0
offset_right = 82.5
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="VBoxContainer3" type="VBoxContainer" parent="CanvasLayer/BoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/BoxContainer/VBoxContainer3"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/BoxContainer/VBoxContainer3/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="BoxContainer" type="BoxContainer" parent="CanvasLayer/BoxContainer/VBoxContainer3/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label_general" type="Label" parent="CanvasLayer/BoxContainer/VBoxContainer3/HBoxContainer/VBoxContainer/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Idioma"
language = "es"

[node name="HSlider_Volumen_General" type="HSlider" parent="CanvasLayer/BoxContainer/VBoxContainer3/HBoxContainer/VBoxContainer/BoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
value = 80.0
script = ExtResource("2_qqjs0")

[node name="BoxContainer4" type="BoxContainer" parent="CanvasLayer/BoxContainer/VBoxContainer3/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label_general" type="Label" parent="CanvasLayer/BoxContainer/VBoxContainer3/HBoxContainer/VBoxContainer/BoxContainer4"]
layout_mode = 2
size_flags_horizontal = 4
text = "General"

[node name="HSlider_Volumen_General" type="HSlider" parent="CanvasLayer/BoxContainer/VBoxContainer3/HBoxContainer/VBoxContainer/BoxContainer4"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
value = 80.0
script = ExtResource("2_qqjs0")

[node name="BoxContainer2" type="BoxContainer" parent="CanvasLayer/BoxContainer/VBoxContainer3/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="CanvasLayer/BoxContainer/VBoxContainer3/HBoxContainer/VBoxContainer/BoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
text = "MÃºsica"
language = "es"

[node name="HSlider_Volumen_Musica" type="HSlider" parent="CanvasLayer/BoxContainer/VBoxContainer3/HBoxContainer/VBoxContainer/BoxContainer2"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("2_qqjs0")

[node name="BoxContainer3" type="BoxContainer" parent="CanvasLayer/BoxContainer/VBoxContainer3/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label3" type="Label" parent="CanvasLayer/BoxContainer/VBoxContainer3/HBoxContainer/VBoxContainer/BoxContainer3"]
layout_mode = 2
size_flags_horizontal = 4
text = "Efectos"
language = "es"

[node name="HSlider_Volumen_VFX" type="HSlider" parent="CanvasLayer/BoxContainer/VBoxContainer3/HBoxContainer/VBoxContainer/BoxContainer3"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("2_qqjs0")

[node name="Button" type="Button" parent="CanvasLayer/BoxContainer/VBoxContainer3"]
layout_mode = 2
text = "Volver"

[connection signal="value_changed" from="CanvasLayer/BoxContainer/VBoxContainer3/HBoxContainer/VBoxContainer/BoxContainer/HSlider_Volumen_General" to="." method="_on_HSlider_Volumen_General_value_changed"]
[connection signal="value_changed" from="CanvasLayer/BoxContainer/VBoxContainer3/HBoxContainer/VBoxContainer/BoxContainer4/HSlider_Volumen_General" to="." method="_on_HSlider_Volumen_General_value_changed"]
[connection signal="value_changed" from="CanvasLayer/BoxContainer/VBoxContainer3/HBoxContainer/VBoxContainer/BoxContainer2/HSlider_Volumen_Musica" to="." method="_on_HSlider_Volumen_Musica_value_changed"]
[connection signal="value_changed" from="CanvasLayer/BoxContainer/VBoxContainer3/HBoxContainer/VBoxContainer/BoxContainer3/HSlider_Volumen_VFX" to="." method="_on_HSlider_Volumen_VFX_value_changed"]
[connection signal="pressed" from="CanvasLayer/BoxContainer/VBoxContainer3/Button" to="." method="_on_BackButton_pressed"]
